<resources>
    <string name="app_name">NOW SOPT Android</string>

    <!--    login activity-->
    <string name="login_title">Welcome To SOPT</string>
    <string name="id_label">ID</string>
    <string name="id_hint">아이디를 입력해주세요</string>
    <string name="pw_label">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
    <string name="login_allow_button">로그인 하기</string>
    <string name="sign_up_button">회원가입 하기</string>

    <!--    sign up activity-->
    <string name="sign_up_title"><b>SIGN UP</b></string>
    <string name="nickname_label">닉네임</string>
    <string name="nickname_hint">닉네임을 입력해주세요</string>
    <string name="phone_number_label">전화번호</string>
    <string name="phone_number_hint">전화번호를 입력해주세요</string>

    <!--    bottom navigation-->
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_my_page">마이페이지</string>

    <!--    home fragment-->
    <string name="home_friend_name">이름</string>
    <string name="home_friend_description">소개</string>

    <!--    toast message-->
    <string name="toast_sign_up_fail">모든 정보를 입력해주세요.</string>
    <string name="toast_sign_up_success">회원가입이 완료되었습니다.</string>
</resources>